--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello Project </h1>
+    <h1>Hello Students </h1>
     <p>Version: 1.0</p>
 </body>
 </html>
